[package]
name = "heimdall"
version = "0.1.0"
authors = ["Bastian Schiffthaler <b.schiffthaler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web         = "3.0"
actix-rt          = "1.0"
approx            = "0.4.0"
async-trait       = "0.1.40"
ahash             = "0.4.5"
sprs              = "0.9.1"
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_trace"] }
ndarray           = { version  = "0.13.1", features = ["serde", "blas"] }
blas-src          = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src      = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
ndarray-stats     = "0.3.0"
mysql             = "18.2.0"
pretty_env_logger = "0.4.0"
regex             = "1.3.9"
serde             = "1.0.112"
serde_json        = "1.0.55"
petgraph          = "0.5.1"
lazy_static       = "1.4.0"
redis             = { git = "https://github.com/mitsuhiko/redis-rs", features = ["connection-manager"], branch = "master" }
tokio             = { version = "*", features = ["full"] }